--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>Hello AngularJS! I am thrilled about this course</h1>
+    <h1>Hello AngularJS! Bella is testing Git!!!</h1>
   </body>
 </html>
